Commented VenuePage.html

--- a/venuepage/VenuePage.html
+++ b/venuepage/VenuePage.html
@@ -4,39 +4,25 @@
 
   <head>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../resources/header.css">
+    <link rel="stylesheet" href="../resources/header.css"> <!--Stylesheet just for the header-->
     <link rel="stylesheet" href="VenuePage.css">
     <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="VenuePage.js"></script>
-
-    <title>Homepage Virginia Barnes</title>
-
+    <title>Venue Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-
-
   </head>
-
-
 
   <body>
 
-    <div class="header">
-      <a href="../homepage.html" class="logo">PlanMe</a>
+    <div class="header"> <!--Header content-->
+      <a href="../homepage.html" class="logo">PlanMe</a> <!--Logo goes here-->
       <div class="headerWords">
-        <a href="../aboutpage/about.html">About Us</a>
-        <a href="../FAQpage/FAQpage.html">FAQ</a>
+        <a href="../aboutpage/about.html">About Us</a> <!--Link to the About Page-->
+        <a href="../FAQpage/FAQpage.html">FAQ</a> <!--Link to the FAQs Page-->
       </div>
     </div>
 
-<div class ="venueOutput"></div>
-
-
-
-
-
-    </div>
+    <div class ="venueOutput"></div> <!--Fill the venueOutput with the venue's information from venuepage.js-->
 
   </body>
-
 </html>
