Commented FAQpage.html

--- a/FAQpage/FAQpage.html
+++ b/FAQpage/FAQpage.html
@@ -2,38 +2,35 @@
 <html>
   <head>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../resources/header.css">
-    <link rel="stylesheet" href="FAQPage.css">
-    <script type="text/javascript" src="FAQpage.js"></script>
-    <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>FAQ Page Kenneth Lee</title>
+    <link rel="stylesheet" href="../resources/header.css"> <!--Stylesheet just for the header-->
+    <link rel="stylesheet" href="FAQPage.css">
+    <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="FAQpage.js"></script>
+    <title>FAQ Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
   </head>
-
   <body>
 
-    <div class="header">
-      <a href="../homepage.html" class="logo">PlanMe</a>
+    <div class="header"> <!--Header content-->
+      <a href="../homepage.html" class="logo">PlanMe</a> <!--Logo goes here-->
       <div class="headerWords">
-        <a href="../aboutpage/about.html">About Us</a>
-        <a href="#">FAQ</a>
+        <a href="../aboutpage/about.html">About Us</a> <!--Link to the About Page-->
+        <a href="#">FAQ</a> <!--Link to the FAQs Page-->
       </div>
     </div>
 
     <div class="FAQ">
-      <h1>FAQ</h1>
+      <h1>FAQ</h1> <!--"Title" for the FAQ Page-->
       <div class="searchBar">
-        <p1>Search</p1>
-        <div class="searchButton"><i class="fa fa-search"></i></div>
+        <p1>Search</p1>  <!--Begin formatting search bar-->
+        <div class="searchButton"><i class="fa fa-search"></i></div>  <!--Display the search button-->
       </div>
       <div class="scroller">
-        <div id="questionAnswer">
-        </div>
+        <div id="questionAnswer"></div>  <!--Fill the output with Q&A's from FAQpage.js-->
       </div>
-
 
   </body>
 </html>
