changed layout for bios

--- a/aboutpage/about.html
+++ b/aboutpage/about.html
@@ -38,6 +38,8 @@
       <h1>Members of the group</h1>
       <div class="bios">
         <img src="pictures/Kenneth.jpg" alt="Kenneth Photo" class="pic">
+        <img src="pictures/Virginia.png" alt="Virginia Photo"class="pic">
+        <img src="pictures/Quadir.png" alt="Quadir Photo"class="pic">
         <div id = 'text'>
           <h1 id ="title">Kenneth Lee</h1>
           <p>
@@ -46,12 +48,12 @@
             class.
           </p>
         </div>
-      </div>
-      <div class="bios">
-        <img src="pictures/Virginia.png" alt="Virginia Photo"class="pic">
-      </div>
-      <div class="bios">
-        <img src="pictures/Quadir.png" alt="Quadir Photo"class="pic">
+        <div id="text">
+
+        </div>
+        <div id="text">
+
+        </div>
       </div>
         <!-- Structure taken from stackoverflow: https://stackoverflow.com/questions/41631517/aligning-multiple-img-with-float -->
   </body>
