--- a/aboutpage/about.html
+++ b/aboutpage/about.html
@@ -51,6 +51,14 @@
       </div>
       <div class="bios">
         <img src="pictures/Quadir.png" alt="Quadir Photo"class="pic">
+        <div id = 'text'>
+          <h1 id ="title">Quadir Russell</h1>
+          <p>
+            My name is Quadir Russell and I'm a sophomore at RPI. I am majoring in<br>
+            ITWS and Data analytics. This website is part of the projects we have to complete for<br>
+            class.
+          </p>
+        </div>
       </div>
         <!-- Structure taken from stackoverflow: https://stackoverflow.com/questions/41631517/aligning-multiple-img-with-float -->
       </div>
