Last minute fixes

--- a/FAQpage/FAQpage.html
+++ b/FAQpage/FAQpage.html
@@ -29,6 +29,7 @@
       <div class="headerWords">
         <a href="../aboutpage/about.html">About Us</a> <!--Link to the About Page-->
         <a href="#">FAQ</a> <!--Link to the FAQs Page-->
+        <a href="../policypage/PolicyPage.html">Policy</a>
       </div>
     </div>
 
