--- a/homepage.html
+++ b/homepage.html
@@ -7,7 +7,7 @@
     <title>Home Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   </head>
-  
+
   <body>
 
     <div class="header"> <!--Header content-->
@@ -15,6 +15,7 @@
       <div class="headerWords">
         <a href="aboutpage/about.html">About Us</a> <!--Link to the About Page-->
         <a href="FAQpage/FAQpage.html">FAQ</a> <!--Link to the FAQs Page-->
+        <a href="policypage/PolicyPage.html">Policy</a>
       </div>
     </div>
 
