--- a/policypage/PolicyPage.html
+++ b/policypage/PolicyPage.html
@@ -3,9 +3,9 @@
 <html>
 
   <head>
-
-    <link rel="stylesheet" href="PolicyPage.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../resources/header.css">
+    <link rel="stylesheet" href="PolicyPage.css">
     <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="PolicyPage.js"></script>
 
@@ -24,7 +24,7 @@
       <a href="../homepage.html" class="logo">PlanMe</a> <!--Logo goes here-->
       <div class="headerWords">
         <a href="../aboutpage/about.html">About Us</a> <!--Link to the About Page-->
-        <a href="../FAQpage/FAQpage.html">FAQ</a> <!--Link to the 
+        <a href="../FAQpage/FAQpage.html">FAQ</a> <!--Link to the
         FAQs Page-->
         <a href="../policypage/PolicyPage.html">Policy</a>
       </div>
