--- a/aboutpage/about.html
+++ b/aboutpage/about.html
@@ -16,6 +16,7 @@
       <div class="headerWords">
         <a href="#">About Us</a>
         <a href="../FAQpage/FAQpage.html">FAQ</a>
+        <a href="../policypage/PolicyPage.html">Policy</a>
       </div>
     </div>
     <div id="description">
@@ -23,7 +24,7 @@
       <div id="box">
         <h3>
         This application was created by Virginia Barnes, Kenneth Lee, and Q as
-        an Introdution to Information Technology term project to demonstrate our
+        an Introduction to Information Technology term project to demonstrate our
         mastery of HTML/CSS, javascript, and user design.
 
         The inspiration for the application came about when Virginia had to plan
@@ -33,9 +34,9 @@
         campus or in the Troy, NY, area who is planning a large event.
       </h3>
       </div>
-    </div>
+    <!-- </div>
       <br><br>
-      <h1>Members of the group</h1>
+      <h1>Members of the Group</h1>
       <div class="bios">
         <img src="pictures/Kenneth.jpg" alt="Kenneth Photo" class="pic">
         <img src="pictures/Virginia.png" alt="Virginia Photo"class="pic">
@@ -44,22 +45,24 @@
           <h1 id ="title">Kenneth Lee</h1>
           <p>
             My name is Kenneth Lee and I'm a freshman at RPI. I am majoring in<br>
-            ITWS and this website is part of the projects we have to complete for<br>
-            class.
+            ITWS.<br>
           </p>
         </div>
         <div id="text">
             <h1 id ="title">Quadir Russell</h1>
             <p>
               My name is Quadir Russell and I'm a sophomore at RPI. I am majoring in<br>
-              ITWS and Data analytics. This website is part of the projects we have to complete for<br>
-              class.
+              ITWS and Data analytics.<br>
             </p>
         </div>
         <div id="text">
-
+          <h1 id ="title">Virginia Barnes</h1>
+          <p>
+            My name is Virginia Barnes and I'm a junior at RPI. I am majoring in<br>
+            Computer Science and ITWS.<br>
+          </p>
         </div>
-      </div>
+      </div> -->
         <!-- Structure taken from stackoverflow: https://stackoverflow.com/questions/41631517/aligning-multiple-img-with-float -->
   </body>
 </html>
