--- a/searchpage/searchPage.html
+++ b/searchpage/searchPage.html
@@ -10,7 +10,7 @@
     <title>Search Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   </head>
-  
+
   <body>
 
     <div class="header"> <!--Header content-->
@@ -18,6 +18,7 @@
       <div class="headerWords">
         <a href="../aboutpage/about.html">About Us</a> <!--Link to the About Page-->
         <a href="../FAQpage/FAQpage.html">FAQ</a> <!--Link to the FAQs Page-->
+        <a href="../policypage/PolicyPage.html">Policy</a>
       </div>
     </div>
 
