--- a/policypage/PolicyPage.html
+++ b/policypage/PolicyPage.html
@@ -18,7 +18,7 @@
         <a href="../aboutpage/about.html">About Us</a> <!--Link to the About Page-->
         <a href="../FAQpage/FAQpage.html">FAQ</a> <!--Link to the
         FAQs Page-->
-        <a href="../policypage/PolicyPage.html">Policy</a>
+        <a href="../policypage/PolicyPage.html">Policy</a><!--Link to the policy page(Self)-->
       </div>
     </div>
 
