Final commenting and validating

--- a/FAQpage/FAQpage.html
+++ b/FAQpage/FAQpage.html
@@ -36,12 +36,13 @@
     <div class="FAQ">
       <h1>FAQ</h1> <!--"Title" for the FAQ Page-->
       <div class="searchBar">
-        <p1>Search</p1>  <!--Begin formatting search bar-->
+        Search  <!--Begin formatting search bar-->
         <div class="searchButton"><i class="fa fa-search"></i></div>  <!--Display the search button-->
       </div>
       <div class="scroller">
         <div id="questionAnswer"></div>  <!--Fill the output with Q&A's from FAQpage.js-->
       </div>
+    </div>
 
   </body>
 </html>
