--- a/aboutpage/about.html
+++ b/aboutpage/about.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display%7CSource+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../resources/header.css">
     <link rel="stylesheet" href="about.css">
     <title>About Us Page Virginia Barnes</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
   </head>
 
   <body>
@@ -19,6 +18,7 @@
         <a href="../policypage/PolicyPage.html">Policy</a>
       </div>
     </div>
+
     <div id="description">
       <h1>About Us</h1>
       <div id="box">
@@ -34,35 +34,33 @@
         campus or in the Troy, NY, area who is planning a large event.
       </h3>
       </div>
-    <!-- </div>
-      <br><br>
-      <h1>Members of the Group</h1>
-      <div class="bios">
-        <img src="pictures/Kenneth.jpg" alt="Kenneth Photo" class="pic">
-        <img src="pictures/Virginia.png" alt="Virginia Photo"class="pic">
-        <img src="pictures/Quadir.png" alt="Quadir Photo"class="pic">
-        <div id = 'text'>
-          <h1 id ="title">Kenneth Lee</h1>
-          <p>
-            My name is Kenneth Lee and I'm a freshman at RPI. I am majoring in<br>
-            ITWS.<br>
-          </p>
-        </div>
-        <div id="text">
-            <h1 id ="title">Quadir Russell</h1>
-            <p>
-              My name is Quadir Russell and I'm a sophomore at RPI. I am majoring in<br>
-              ITWS and Data analytics.<br>
-            </p>
-        </div>
-        <div id="text">
-          <h1 id ="title">Virginia Barnes</h1>
-          <p>
-            My name is Virginia Barnes and I'm a junior at RPI. I am majoring in<br>
-            Computer Science and ITWS.<br>
-          </p>
-        </div>
-      </div> -->
+    </div>
+
+    <br><br>
+
+    <h1>Members of the Group</h1>
+    <div class="bios">
+      <img src="pictures/Kenneth.jpg" alt="Kenneth Photo" class="pic">
+      <img src="pictures/Virginia.png" alt="Virginia Photo" class="pic">
+      <img src="pictures/Quadir.png" alt="Quadir Photo" class="pic">
+      <div id = 'text'>
+        <h1>Kenneth Lee</h1>
+        <p>
+          My name is Kenneth Lee and I'm a freshman at RPI. I am majoring in<br>
+          ITWS.<br>
+        </p>
+        <h1>Quadir Russell</h1>
+        <p>
+          My name is Quadir Russell and I'm a sophomore at RPI. I am majoring in<br>
+          ITWS and Data analytics.<br>
+        </p>
+        <h1>Virginia Barnes</h1>
+        <p>
+          My name is Virginia Barnes and I'm a junior at RPI. I am majoring in<br>
+          Computer Science and ITWS.<br>
+        </p>
+      </div>
+    </div>
         <!-- Structure taken from stackoverflow: https://stackoverflow.com/questions/41631517/aligning-multiple-img-with-float -->
   </body>
 </html>
