--- a/policypage/PolicyPage.html
+++ b/policypage/PolicyPage.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 
 <html>
-
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display%7CSource+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../resources/header.css">
     <link rel="stylesheet" href="PolicyPage.css">
     <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="PolicyPage.js"></script>
-
     <title>Homepage Virginia Barnes</title>
-
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-
-
-
   </head>
-
-
 
   <body>
     <div class="header"> <!--Header content-->
@@ -39,9 +31,7 @@
     </p>
 
     <div class="main">
-
     </div>
 
   </body>
-
 </html>
