--- a/venuepage/VenuePage.html
+++ b/venuepage/VenuePage.html
@@ -3,7 +3,7 @@
 <html>
 
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display%7CSource+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../resources/header.css"> <!--Stylesheet just for the header-->
     <link rel="stylesheet" href="VenuePage.css">
     <script type="text/javascript" src="../resources/jquery-3.1.1.min.js"></script>
