--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display%7CSource+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="resources/header.css"> <!--Stylesheet just for the header-->
     <link rel="stylesheet" href="homepage.css">
     <title>Home Page</title>
@@ -20,7 +20,7 @@
     </div>
 
     <div id="description"> <!--Describes what the Web App is-->
-      <h3><div id="slogan">Plan your event with PlanMe</div></h3> <!--Slogan-->
+      <h3 id="slogan">Plan your event with PlanMe</h3> <!--Slogan-->
       <div id="box"> <!--Paragraph of description of Web App-->
         <h3>
           Are you planning a big event? A party, formal, or wedding? Well, you have come to the
@@ -34,18 +34,18 @@
     <div id="searchBox"> <!--User can begin search for venues-->
       <form action="searchpage/searchPage.html" method="GET"> <!--Will send form data to searchpage.html-->
         <br> <!--newline-->
-        <a id="date">Date: <input type="date" name="Date" id="Date"></a> <!--User inputs the date they want for their event-->
+        <a id="date">Date: </a><input type="date" name="Date" id="Date"> <!--User inputs the date they want for their event-->
         <br><br>
-        <a id="capacity">Capacity: <select id="Capacity" name="Capacity"> <!--User inputs the capacity they want for their event-->
+        <a id="capacity">Capacity: </a><select id="Capacity" name="Capacity"> <!--User inputs the capacity they want for their event-->
           <option value = "0">(select capacity)</option>
           <option value = "1">100+</option>
           <option value = "2">200+</option>
           <option value = "3">300+</option>
           <option value = "4">400+</option>
           <option value = "5">500+</option>
-        </select></a>
+        </select>
         <br><br>
-        <a id="price">Price: <select id ="Price" name="Price"> <!--User inputs the price they want for their event-->
+        <a id="price">Price: </a><select id ="Price" name="Price"> <!--User inputs the price they want for their event-->
           <option value = "0">(select price)</option>
           <option value = "1">Below $100</option>
           <option value = "2">Below $200</option>
@@ -57,7 +57,7 @@
           <option value = "8">Below $800</option>
           <option value = "9">Below $900</option>
           <option value = "10">Below $1000</option>
-        </select></a>
+        </select>
         <br><br>
         <input id="button" type="submit" value="Go"/> <!--Submit the form information and redirect to searchpage.html-->
       </form>
